--- a/CarBo/Base.lproj/LaunchScreen.storyboard
+++ b/CarBo/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,13 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11761" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina3_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -20,27 +22,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="carboIcon.png" translatesAutoresizingMaskIntoConstraints="NO" id="PUe-ZC-wqB">
-                                <rect key="frame" x="40" y="192" width="240" height="96"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="240" id="Uoa-sr-pRy"/>
-                                    <constraint firstAttribute="height" constant="96" id="gpv-aC-NXR"/>
-                                </constraints>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch_carbo copy 2.png" translatesAutoresizingMaskIntoConstraints="NO" id="wGG-Ba-qfQ">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.15686274510000001" green="0.67450980390000004" blue="0.43921568630000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.15686274510000001" green="0.67450980390000004" blue="0.43921568630000002" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="PUe-ZC-wqB" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="JnO-45-HUO"/>
-                            <constraint firstItem="PUe-ZC-wqB" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="PCz-bH-Kfd"/>
+                            <constraint firstItem="wGG-Ba-qfQ" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="-16" id="Dez-fd-3ZZ"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="wGG-Ba-qfQ" secondAttribute="bottom" id="HkS-XN-mFt"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="wGG-Ba-qfQ" secondAttribute="trailing" constant="-16" id="dmF-W3-ckE"/>
+                            <constraint firstItem="wGG-Ba-qfQ" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="-20" id="kN8-hd-xAT"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-113" y="124"/>
+            <point key="canvasLocation" x="-142.5" y="123.75"/>
         </scene>
     </scenes>
     <resources>
-        <image name="carboIcon.png" width="452" height="150"/>
+        <image name="launch_carbo copy 2.png" width="640" height="960"/>
     </resources>
 </document>
